# clippy

./: .gitignore  FLATHUB.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
clippy/: __init__.py  capture.py  cli.py  clipboard.py  config.py  daemon.py  ipc.py  panel.py  settings.py  settings_window.py  setup.py  sound.py  storage.py  theme.py  tray.py  updates.py
packaging/: README.md
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD
packaging/deb/: build-deb.sh
packaging/flatpak/: build-flatpak.sh  clippy-launcher.sh  com.lojel.Clippy.desktop  com.lojel.Clippy.metainfo.xml  com.lojel.Clippy.yaml  io.github.davidboulay.Clippy.desktop  io.github.davidboulay.Clippy.metainfo.xml  io.github.davidboulay.Clippy.yaml
scripts/: install.sh  uninstall.sh
