[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "clippy"
version = "0.2.0"
description = "A Paste-style clipboard history panel for Wayland (COSMIC/wlroots)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# NOTE: PyGObject, gtk-layer-shell and AppIndicator come from system packages
# (see README / scripts/install.sh), not from PyPI.
dependencies = []

[project.scripts]
clippy = "clippy.cli:main"

[tool.setuptools]
packages = ["clippy"]
